[metadata]
name = text-augmentation-package-sebx
version = 0.0.1
author = Sebx
author_email = sebandrod@gmail.com.com
description = A text augmentation exercise package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sebx/text_augmentation
project_urls =
    Bug Tracker = https://github.com/Sebx/text_augmentation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src